fixes the about-us & pelican header image stretch in iphone safari browser

--- a/src/public/css/mystyle.scss
+++ b/src/public/css/mystyle.scss
@@ -101,24 +101,16 @@
 /* Page Parallax Title */
 /* ------------------------------ */
 .page-title{
-
-  //position: relative;
+  position: relative;
   padding: 6rem 0 7rem ;  //this sets up the dimensions of the div
-
   //z-index: 1;
   opacity: 0.9;    // to reduce the opacity of image
-  //background: #000 ;
-  //padding: 0 20px;
+
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: #fff;
-  //object-fit: cover;
-  //align-self: center;
-  -webkit-background-size: cover;
-  align-items: flex-start;
-
 }
 
 //This sets up a darker scrim layout behind the div
@@ -239,4 +231,17 @@ $breakpoint-min-xl : 1200px ;
 
 
 
+/* ************************** Browser Specific Code *******************/
 
+
+
+/* This code works only on Safari 11+ */
+@media not all and (min-resolution:.001dpcm)
+{ @supports (-webkit-appearance:none) and (stroke-color:transparent) {
+
+  // In Mobile the parallax doesn't really work. And especially in safari, there is an error that completely stretches the image if background-attachment is set to fixed.
+  // So anything other than "fixed" works, so i used scroll, since parallax isn't working anyways;
+  .page-title {
+    background-attachment: scroll;
+  }
+}}
